[package]
edition = "2021"
name = "rp2040-pwm"
version = "0.1.0"
authors = ["Maksim Vykhota <m.vykhota@protonmail.com>"]
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.6", git="https://github.com/embassy-rs/embassy.git", rev="37111a8", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-sync = { version = "0.6", git="https://github.com/embassy-rs/embassy.git", rev="37111a8" }
embassy-time = { version = "0.3", git="https://github.com/embassy-rs/embassy.git", rev="37111a8", features = ["defmt", "defmt-timestamp-uptime"] }

cortex-m = { version = "0.7.6" }
embassy-rp = { version = "0.2", git="https://github.com/embassy-rs/embassy.git", rev="37111a8", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }

portable-atomic = { version = "1.10" }

[[bin]]
name = "rp2040-pwm"
test = false
doctest = false
bench = false